--- a/xpi/content/css/win8/overlayextra.css
+++ b/xpi/content/css/win8/overlayextra.css
@@ -76,7 +76,7 @@
 	  -moz-image-region: rect(0, 108px, 18px, 90px);
 	}
 
-	#main-window[defaultfxtheme="true"] #nav-bar :-moz-any(#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_ctr-button,#ctraddon_go-button,#ctraddon_preferences-button,#ctraddon_restart-button) > .toolbarbutton-icon {
+	#main-window[defaultfxtheme="true"] #nav-bar :-moz-any(#ctraddon_ctr-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_ctr-button,#ctraddon_go-button,#ctraddon_preferences-button,#ctraddon_restart-button) > .toolbarbutton-icon {
 	  padding: 2px 6px !important;
 	}
 
@@ -90,7 +90,7 @@
 	}
 	
 	@media (-moz-os-version: windows-win10) {
-	  #main-window[defaultfxtheme="true"] #nav-bar :-moz-any(#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_ctr-button,#ctraddon_go-button,#ctraddon_preferences-button,#ctraddon_restart-button) > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #nav-bar :-moz-any(#ctraddon_ctr-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_ctr-button,#ctraddon_go-button,#ctraddon_preferences-button,#ctraddon_restart-button) > .toolbarbutton-icon {
 		padding: 4px 6px !important;
 	  }
 	  #main-window[defaultfxtheme="true"] #nav-bar #ctraddon_appbutton > .toolbarbutton-icon,
@@ -152,6 +152,10 @@
 		#main-window[defaultfxtheme="true"] toolbar:not(#nav-bar) :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button,#ctraddon_preferences-button,#ctraddon_restart-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button) .toolbarbutton-icon {
 		  width: 18px !important;
 		  height: 18px !important;
+		}
+		#main-window[defaultfxtheme="true"] #nav-bar #ctraddon_ctr-button .toolbarbutton-icon {
+		  width: 32px !important;
+		  height: 26px !important;
 		}
 	}
 	
@@ -303,17 +307,117 @@
 		-moz-border-right-colors: ThreeDShadow #f0f0f0;
 	  }
 
+	  @media not all and (min-resolution: 1.11dppx) {
+	  @media all and (-moz-windows-theme:aero) {
+
+		#main-window:not([fx57plus="true"])[defaultfxtheme="true"] #appmenuSecondaryPane menupopup {
+			-moz-appearance: none;
+			background-image: linear-gradient(to right, #f0f0f0 26px, ThreeDLightShadow 26px,
+											  ThreeDLightShadow 27px, ThreeDHighlight 27px,
+											  ThreeDHighlight 28px, #f0f0f0 28px);
+			border: 3px solid;
+			-moz-border-top-colors: ThreeDShadow #f0f0f0;
+			-moz-border-bottom-colors: ThreeDShadow #f0f0f0;
+			-moz-border-left-colors: ThreeDShadow #f0f0f0;
+			-moz-border-right-colors: ThreeDShadow #f0f0f0;
+		}
+	  }
+	  }
+
 	  #main-window[defaultfxtheme="true"] #appmenuPrimaryPane menupopup:-moz-locale-dir(rtl) {
 		background-image: linear-gradient(to left, white 26px, ThreeDLightShadow 26px,
 										  ThreeDLightShadow 27px, ThreeDHighlight 27px,
 										  ThreeDHighlight 28px, white 28px);
 	  }
+
 	  #main-window[defaultfxtheme="true"] #appmenuSecondaryPane menupopup:-moz-locale-dir(rtl) {
 		background-image: linear-gradient(to left, #f0f0f0 26px, ThreeDLightShadow 26px,
 										  ThreeDLightShadow 27px, ThreeDHighlight 27px,
 										  ThreeDHighlight 28px, #f0f0f0 28px);
 	  }
 
+	  
+	  @media not all and (min-resolution: 1.11dppx) {
+	  @media all and (-moz-windows-theme:aero) {
+
+		#main-window:not([fx57plus="true"])[defaultfxtheme="true"] #appmenuSecondaryPane menupopup:-moz-locale-dir(rtl) {
+			background-image: linear-gradient(to left, #f0f0f0 26px, ThreeDLightShadow 26px,
+										  ThreeDLightShadow 27px, ThreeDHighlight 27px,
+										  ThreeDHighlight 28px, #f0f0f0 28px);
+		}
+	  }
+	  }
+
+	  
+	  /* Hi-DPI overrides of the menu backgrounds, to adjust where the gutter line falls */
+	  @media (min-resolution: 1.25dppx) {
+		#main-window[defaultfxtheme="true"] #appmenuPrimaryPane menupopup {
+		  background-image: linear-gradient(to right, white 22.4px, ThreeDLightShadow 22.4px,
+											ThreeDLightShadow 23.2px, ThreeDHighlight 23.2px,
+											ThreeDHighlight 24px, white 24px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuSecondaryPane menupopup {
+		  background-image: linear-gradient(to right, #f0f0f0 22.4px, ThreeDLightShadow 22.4px,
+											ThreeDLightShadow 23.2px, ThreeDHighlight 23.2px,
+											ThreeDHighlight 24px, #f0f0f0 24px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuPrimaryPane menupopup:-moz-locale-dir(rtl) {
+		  background-image: linear-gradient(to left, white 22.4px, ThreeDLightShadow 22.4px,
+											ThreeDLightShadow 23.2px, ThreeDHighlight 23.2px,
+											ThreeDHighlight 24px, white 24px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuSecondaryPane menupopup:-moz-locale-dir(rtl) {
+		  background-image: linear-gradient(to left, #f0f0f0 22.4px, ThreeDLightShadow 22.4px,
+											ThreeDLightShadow 23.2px, ThreeDHighlight 23.2px,
+											ThreeDHighlight 24px, #f0f0f0 24px);
+		}
+	  }
+
+	  @media (min-resolution: 1.5dppx) {
+		#main-window[defaultfxtheme="true"] #appmenuPrimaryPane menupopup {
+		  background-image: linear-gradient(to right, white 20.6667px, ThreeDLightShadow 20.6667px,
+											ThreeDLightShadow 21.3333px, ThreeDHighlight 21.3333px,
+											ThreeDHighlight 22px, white 22px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuSecondaryPane menupopup {
+		  background-image: linear-gradient(to right, #f0f0f0 20.6667px, ThreeDLightShadow 20.6667px,
+											ThreeDLightShadow 21.3333px, ThreeDHighlight 21.3333px,
+											ThreeDHighlight 22px, #f0f0f0 22px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuPrimaryPane menupopup:-moz-locale-dir(rtl) {
+		  background-image: linear-gradient(to left, white 20.6667px, ThreeDLightShadow 20.6667px,
+											ThreeDLightShadow 21.3333px, ThreeDHighlight 21.3333px,
+											ThreeDHighlight 22px, white 22px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuSecondaryPane menupopup:-moz-locale-dir(rtl) {
+		  background-image: linear-gradient(to left, #f0f0f0 20.6667px, ThreeDLightShadow 20.6667px,
+											ThreeDLightShadow 21.3333px, ThreeDHighlight 21.3333px,
+											ThreeDHighlight 22px, #f0f0f0 22px);
+		}
+	  }
+
+	  @media (min-resolution: 2dppx) {
+		#main-window[defaultfxtheme="true"] #appmenuPrimaryPane menupopup {
+		  background-image: linear-gradient(to right, white 19.5px, ThreeDLightShadow 19.5px,
+											ThreeDLightShadow 20px, ThreeDHighlight 20px,
+											ThreeDHighlight 20.5px, white 20.5px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuSecondaryPane menupopup {
+		  background-image: linear-gradient(to right, #f0f0f0 19.5px, ThreeDLightShadow 19.5px,
+											ThreeDLightShadow 20px, ThreeDHighlight 20px,
+											ThreeDHighlight 20.5px, #f0f0f0 20.5px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuPrimaryPane menupopup:-moz-locale-dir(rtl) {
+		  background-image: linear-gradient(to left, white 19.5px, ThreeDLightShadow 19.5px,
+											ThreeDLightShadow 20px, ThreeDHighlight 20px,
+											ThreeDHighlight 20.5px, white 20.5px);
+		}
+		#main-window[defaultfxtheme="true"] #appmenuSecondaryPane menupopup:-moz-locale-dir(rtl) {
+		  background-image: linear-gradient(to left, #f0f0f0 19.5px, ThreeDLightShadow 19.5px,
+											ThreeDLightShadow 20px, ThreeDHighlight 20px,
+											ThreeDHighlight 20.5px, #f0f0f0 20.5px);
+		}
+	  }
 	  #main-window[defaultfxtheme="true"] #appmenuPrimaryPane > menuseparator {
 		-moz-appearance: none;
 		margin-top: 3px;
