--- a/xpi/content/css/win8/empty_favicon_g1v2.css
+++ b/xpi/content/css/win8/empty_favicon_g1v2.css
@@ -129,6 +129,11 @@
   #main-window[fx55plus="true"] treechildren::-moz-tree-image(title, query, OrganizerQuery_History) {
 	list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar.png") !important;
 	-moz-image-region: rect(0, 180px, 18px, 162px) !important;
+  }  
+  
+  treechildren::-moz-tree-image(query, OrganizerQuery_History) {
+	list-style-image: url("chrome://browser/skin/places/calendar.png") !important;
+	-moz-image-region: auto !important;
   }
 
   treechildren::-moz-tree-image(title, query, folder) {
