--- a/xpi/content/css/win8/overlayextra.css
+++ b/xpi/content/css/win8/overlayextra.css
@@ -451,7 +451,7 @@
 	}
 	
 	#appmenu-edit-label{
-	  margin-left: 2px !important;
+	  -moz-margin-start: 2px !important;
 	}
 
 	@media all and (-moz-windows-theme:aero) {
