--- a/xpi/content/css/winxp/overlayextra.css
+++ b/xpi/content/css/winxp/overlayextra.css
@@ -202,11 +202,11 @@
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_addons_xp.png");
 	}
 	@media (min-resolution: 1.1dppx) {
-		#appmenu-popup #appmenu_newPrivateWindow{
+		#appmenu-popup #appmenu_newPrivateWindow > .menu-iconic-left > .menu-iconic-icon {
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_private@2x.png");
 		  width: 16px !important;
 		}
-		#appmenu-popup #appmenu_addons{
+		#appmenu-popup #appmenu_addons > .menu-iconic-left > .menu-iconic-icon {
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_addons@2x.png");
 		  width: 16px !important;
 		}
