--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -230,35 +230,35 @@
 	}
 	
 	@media (min-resolution: 1.1dppx) {
-		#appmenu-popup #appmenu_print_popup,
-		#appmenu-popup #appmenu_print{
+		#appmenu-popup #appmenu_print_popup > .menu-iconic-left > .menu-iconic-icon,
+		#appmenu-popup #appmenu_print > .menu-iconic-left > .menu-iconic-icon {
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_print@2x.png");
 		  width: 16px !important;
 		  height: 16px !important;
 		}
-		#appmenu-popup #appmenu-quit{
+		#appmenu-popup #appmenu-quit > .menu-iconic-left > .menu-iconic-icon{
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_close@2x.png");
 		  width: 16px !important;
 		  height: 16px !important;
 		}
-		#appmenu-popup #appmenu_bookmarks{
+		#appmenu-popup #appmenu_bookmarks > .menu-iconic-left > .menu-iconic-icon {
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/starred48.png");
 		  width: 16px !important;
 		  height: 16px !important;
 		}		
-		#appmenu-popup #appmenu-editmenu-cut,
+		#appmenu-popup #appmenu-editmenu-cut > .menu-iconic-left > .menu-iconic-icon,
 		#appmenu-popup #appmenu-cut .toolbarbutton-icon{
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_cut@2x.png");
 		  width: 16px !important;
 		  height: 16px !important;
 		}
-		#appmenu-popup #appmenu-editmenu-copy,
+		#appmenu-popup #appmenu-editmenu-copy > .menu-iconic-left > .menu-iconic-icon,
 		#appmenu-popup #appmenu-copy .toolbarbutton-icon{
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_copy@2x.png");
 		  width: 16px !important;
 		  height: 16px !important;
 		}
-		#appmenu-popup #appmenu-editmenu-paste,
+		#appmenu-popup #appmenu-editmenu-paste > .menu-iconic-left > .menu-iconic-icon,
 		#appmenu-popup #appmenu-paste .toolbarbutton-icon{
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_paste@2x.png");
 		  width: 16px !important;
@@ -269,16 +269,16 @@
 		#ctraddon_PanelUI-CTR-button .toolbarbutton-icon,
 		#ctraddon_context_menu_entry,
 		#ctraddon_tools_menu_entry,
-		#appmenu-popup #ctraddon_appmenu_ctr,
-		#appmenu-popup #ctraddon_appmenu_ctr2{
+		#appmenu-popup #ctraddon_appmenu_ctr > .menu-iconic-left > .menu-iconic-icon,
+		#appmenu-popup #ctraddon_appmenu_ctr2 > .menu-iconic-left > .menu-iconic-icon{
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/palette_ctr.png");
 		  width: 16px !important;
 		  height: 16px !important;
 		}
 
 		#ctraddon_PanelUI-CTR-restartbutton .toolbarbutton-icon,
-		#menu_FilePopup #ctraddon_restart-menu,
-		#appmenu-popup #ctraddon_restart-appmenu{
+		#menu_FilePopup #ctraddon_restart-menu > .menu-iconic-left > .menu-iconic-icon,
+		#appmenu-popup #ctraddon_restart-appmenu > .menu-iconic-left > .menu-iconic-icon {
 		  list-style-image:url("chrome://classic_theme_restorer/content/images/ctrrestart@2x.png");
 		  width: 16px !important;
 		  height: 16px !important;
