--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -569,6 +569,12 @@
 	  width: unset !important;
 	}
 	
+	/**/
+	#main-window[fx56plus="true"] #nav-bar toolbarbutton[type="menu-button"] .toolbarbutton-menubutton-dropmarker .dropmarker-icon {
+	  padding: 0 !important;
+	  -moz-padding-end: 2px !important;
+	}
+	
   /*Temporary Fx57 tweaks*/
   #main-window[fx57plus="true"] .searchbar-textbox,
   #main-window[fx57plus="true"] #urlbar-wrapper,
